--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Crunchyroll Premium BD Shop</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">  <!-- Design Style -->  <style>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- Design Style -->
+  <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -12,13 +16,16 @@
     .container {
       max-width: 1200px;
       margin: auto;
+      padding: 0 15px;
     }
     .page {
       display: none;
       padding: 20px;
       background: #ffffff;
     }
-    .active { display: block; }
+    .active {
+      display: block;
+    }
     img.banner {
       width: 100%;
       border-radius: 8px;
@@ -38,8 +45,11 @@
       border-radius: 6px;
       border: 1px solid #ccc;
       font-size: 16px;
+      box-sizing: border-box;
     }
-    button { cursor: pointer; }
+    button {
+      cursor: pointer;
+    }
     .mega-btn {
       background: green;
       color: white;
@@ -76,21 +86,373 @@
       margin-top: 10px;
       color: black;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #f2f2f2;
-      color: #000;
-      font-size: 14px;
-      margin-top: 40px;
-    }
-  </style>  <!-- Firebase -->  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>  <!-- EmailJS -->  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script></head>
+  </style>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+</head>
 <body>
 <div class="container">
-  <!-- All existing page content goes here as-is -->
+
+<!-- Sign Up -->
+<div id="signupPage" class="page active">
+  <h2>🔐 সাইন আপ</h2>
+  <input id="suEmail" type="email" placeholder="📧 ইমেইল" />
+  <input id="suPhone" type="text" placeholder="📱 মোবাইল নম্বর" />
+  <input id="suPass" type="password" placeholder="🔑 পাসওয়ার্ড (৬ সংখ্যার)" />
+  <input id="suConfirm" type="password" placeholder="🔑 কনফার্ম পাসওয়ার্ড" />
+  <input id="suCity" type="text" placeholder="🏙️ শহর" />
+  <button onclick="handleSignup()">✅ সাইন আপ</button>
+  <p>
+    ইতিমধ্যে একাউন্ট আছে? <a href="#" onclick="showPage('loginPage')">সাইন ইন করুন</a>
+  </p>
+  <p id="suError" class="error"></p>
 </div>
-<footer>
-  © 2025 Crunchyroll Premium BD Shop. Developed with ❤️ by Nur.
-</footer>
+
+<!-- Sign In -->
+<div id="loginPage" class="page">
+  <h2>🔓 সাইন ইন</h2>
+  <input id="liEmail" type="email" placeholder="📧 ইমেইল" />
+  <input id="liPass" type="password" placeholder="🔑 পাসওয়ার্ড" />
+  <button onclick="handleLogin()">➡️ সাইন ইন করুন</button>
+  <p>নতুন? <a href="#" onclick="showPage('signupPage')">সাইন আপ করুন</a></p>
+  <p id="liError" class="error"></p>
+</div>
+
+<!-- Main Page -->
+<div id="mainPage" class="page">
+  <img
+    src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg"
+    class="banner"
+  />
+  <img
+    src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg"
+    class="avatar"
+  />
+  <h2 style="text-align:center;">Welcome to Crunchyroll Premium BD Shop</h2>
+  <button class="mega-btn" onclick="showPage('packagePage')">💥 MEGA PACKAGES</button>
+  <p style="margin-top:20px;">
+    <strong>Total Users:</strong>
+    <span id="userCount">0</span> |
+    <strong>Total Orders:</strong>
+    <span id="orderCount">0</span>
+  </p>
+</div>
+
+<!-- Package Page -->
+<div id="packagePage" class="page">
+  <h2>📦 প্যাকেজ সিলেকশন</h2>
+  <!-- Shared -->
+  <h3>📤 Shared Profile</h3>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '1 Month', 100)"
+  >
+    1 Month – 100 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '2 Months', 200)"
+  >
+    2 Months – 200 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '3 Months', 300)"
+  >
+    3 Months – 300 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '6 Months', 600)"
+  >
+    6 Months – 600 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '8 Months', 840)"
+  >
+    8 Months – 840 TK
+  </button>
+  <!-- Personal -->
+  <h3>👤 Personal Profile</h3>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '1 Month', 240)"
+  >
+    1 Month – 240 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '2 Months', 480)"
+  >
+    2 Months – 480 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '3 Months', 720)"
+  >
+    3 Months – 720 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '6 Months', 1440)"
+  >
+    6 Months – 1440 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '8 Months', 1800)"
+  >
+    8 Months – 1800 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '12 Months', 2760)"
+  >
+    12 Months – 2760 TK
+  </button>
+  <!-- Primary -->
+  <h3>👑 Primary Account</h3>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '1 Month', 650)"
+  >
+    1 Month – 650 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '2 Months', 1300)"
+  >
+    2 Months – 1300 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '3 Months', 1950)"
+  >
+    3 Months – 1950 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '6 Months', 3600)"
+  >
+    6 Months – 3600 TK
+  </button>
+
+  <div class="action-btns">
+    <button class="orange" onclick="goToCheckout()">🛒 Add To Cart</button>
+    <button class="green" onclick="showPage('mainPage')">⬅️ Back To Home</button>
+  </div>
+  <p id="pkgError" class="error"></p>
+</div>
+
+<!-- Checkout Page -->
+<div id="checkoutPage" class="page">
+  <h2>✅ Checkout</h2>
+  <div id="selectedInfo"></div>
+  <div style="margin-top: 20px">
+    <input id="coName" type="text" placeholder="Full Name" />
+    <input id="coEmail" type="email" placeholder="Email" />
+    <input id="coAddress" type="text" placeholder="Street Address" />
+    <input id="coMobile" type="text" placeholder="Mobile Number" />
+    <input id="coPaymentNumber" type="text" placeholder="Payment Number" />
+    <input id="coTransID" type="text" placeholder="Transaction ID" />
+    <select id="paymentMethod" onchange="updatePayNumber()">
+      <option value="">-- পেমেন্ট মেথড সিলেক্ট করুন --</option>
+      <option value="Bkash">Bkash</option>
+      <option value="Nagad">Nagad</option>
+      <option value="Rocket">Rocket</option>
+    </select>
+    <div id="payNumber" class="copy-box"></div>
+    <p>
+      অবশ্যই সেন্ড মানি করতে হবে এবং নির্দিষ্ট পরিমাণ পাঠাবেন। কম পাঠালে
+      রিফান্ড হবে না।
+    </p>
+    <button class="green" onclick="confirmOrder()">✅ Order Confirm</button>
+    <button class="orange" onclick="showPage('packagePage')">
+      ⬅️ Back To Packages
+    </button>
+  </div>
+  <p id="coError" class="error"></p>
+</div>
+
+</div>
+
+<script>
+  // --- Configurations ---
+  const firebaseConfig = {
+    apiKey: 'AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4',
+    authDomain: 'crunchyrollpremiumbd-shop.firebaseapp.com',
+    projectId: 'crunchyrollpremiumbd-shop',
+  };
+  const emailjsConfig = {
+    service: 'service_z1714kq',
+    adminTpl: 'template_hp66tqp',
+    custTpl: 'template_1z1lhlf',
+    publicKey: 'SsUmUorUm-BZG8LBY',
+  };
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+  emailjs.init(emailjsConfig.publicKey);
+
+  // --- Helpers ---
+  function showPage(id) {
+    document.querySelectorAll('.page').forEach((p) => p.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+  }
+  function validPhone(p) {
+    return /^\d{11}$/.test(p);
+  }
+  function validPass(p) {
+    return /^\d{6}$/.test(p);
+  }
+
+  // --- SignUp ---
+  async function handleSignup() {
+    const e = document.getElementById('suEmail').value.trim();
+    const p = document.getElementById('suPhone').value.trim();
+    const pw = document.getElementById('suPass').value;
+    const cp = document.getElementById('suConfirm').value;
+    const c = document.getElementById('suCity').value.trim();
+    const err = document.getElementById('suError');
+    err.textContent = '';
+    if (!validPhone(p)) {
+      err.textContent = '⚠️ মোবাইল ১১ সংখ্যার হতে হবে';
+      return;
+    }
+    if (!validPass(pw)) {
+      err.textContent = '⚠️ পাসওয়ার্ড ৬ সংখ্যার সংখ্যা হতে হবে';
+      return;
+    }
+    if (pw !== cp) {
+      err.textContent = '⚠️ পাসওয়ার্ড মিলছে না';
+      return;
+    }
+    if (!c) {
+      err.textContent = '⚠️ শহর লিখুন';
+      return;
+    }
+    try {
+      const snap1 = await db.collection('users').where('email', '==', e).get();
+      if (!snap1.empty) {
+        err.textContent = '⚠️ পূর্বে সাইন আপ করা হয়েছে';
+        return;
+      }
+      const snap2 = await db.collection('users').where('phone', '==', p).get();
+      if (!snap2.empty) {
+        err.textContent = '⚠️ মোবাইল নম্বর আগেই ব্যবহৃত হয়েছে';
+        return;
+      }
+      await auth.createUserWithEmailAndPassword(e, pw);
+      await auth.currentUser.sendEmailVerification();
+      await db.collection('users').add({
+        email: e,
+        phone: p,
+        city: c,
+        timestamp: firebase.firestore.FieldValue.serverTimestamp(),
+      });
+      alert('✅ সাইন আপ সফল! ইমেইলে ভেরিফিকেশন পাঠানো হয়েছে।');
+      showPage('loginPage');
+    } catch (err) {
+      err.textContent = err.message;
+    }
+  }
+
+  // --- Login ---
+  async function handleLogin() {
+    const e = document.getElementById('liEmail').value.trim();
+    const pw = document.getElementById('liPass').value;
+    const err = document.getElementById('liError');
+    err.textContent = '';
+    try {
+      const res = await auth.signInWithEmailAndPassword(e, pw);
+      if (!res.user.emailVerified) {
+        err.textContent = '⚠️ ইমেইল ভেরিফাই করুন';
+        return;
+      }
+      showPage('mainPage');
+      startListeners();
+    } catch (err) {
+      err.textContent = err.message;
+    }
+  }
+
+  // --- Counts ---
+  function startListeners() {
+    db.collection('users').onSnapshot((s) => (document.getElementById('userCount').textContent = s.size));
+    db.collection('orders').onSnapshot((s) => (document.getElementById('orderCount').textContent = s.size));
+  }
+
+  // --- Package Selection ---
+  let selectedPkg = null;
+  function selectPackage(profile, duration, price) {
+    selectedPkg = { profile, duration, price };
+    document.getElementById('pkgError').textContent = '';
+    alert(`✅ '${profile}' (${duration}) – ${price} TK সিলেক্ট হয়েছে`);
+  }
+
+  // --- Update Payment Number ---
+  function updatePayNumber() {
+    const m = document.getElementById('paymentMethod').value;
+    let num = '';
+    if (m === 'Bkash') num = '01740433733';
+    if (m === 'Nagad' || m === 'Rocket') num = '01603599843';
+    document.getElementById('payNumber').innerHTML = num
+      ? `${m} নম্বর: <strong>${num}</strong> <button onclick="navigator.clipboard.writeText('${num}')">📋 কপি</button>`
+      : '';
+  }
+
+  // --- Show Checkout Info ---
+  function goToCheckout() {
+    if (!selectedPkg) {
+      document.getElementById('pkgError').textContent = '⚠️ প্যাকেজ সিলেক্ট করুন';
+      return;
+    }
+    document.getElementById('selectedInfo').innerHTML = `
+      <p>📦 আপনি নিয়েছেন: <strong>${selectedPkg.profile}</strong></p>
+      <p>🕒 মেয়াদ: <strong>${selectedPkg.duration}</strong></p>
+      <p>💰 মূল্য: <strong>${selectedPkg.price} TK</strong></p>
+    `;
+    showPage('checkoutPage');
+  }
+
+  // --- Confirm Order ---
+  async function confirmOrder() {
+    const name = document.getElementById('coName').value.trim();
+    const email = document.getElementById('coEmail').value.trim();
+    const addr = document.getElementById('coAddress').value.trim();
+    const mobile = document.getElementById('coMobile').value.trim();
+    const payNo = document.getElementById('coPaymentNumber').value.trim();
+    const trans = document.getElementById('coTransID').value.trim();
+    const pm = document.getElementById('paymentMethod').value;
+    const coErr = document.getElementById('coError');
+    coErr.textContent = '';
+    if (!name || !email || !addr || !mobile || !payNo || !trans || !pm) {
+      coErr.textContent = '⚠️ সব তথ্য ভরুন';
+      return;
+    }
+    try {
+      const data = { ...selectedPkg, name, email, addr, mobile, payNo, trans, pm, timestamp: firebase.firestore.FieldValue.serverTimestamp() };
+      await db.collection('orders').add(data);
+      // Emails
+      emailjs.send(emailjsConfig.service, emailjsConfig.custTpl, data);
+      emailjs.send(emailjsConfig.service, emailjsConfig.adminTpl, data);
+      alert('✅ অর্ডার সফল হয়েছে। কাস্টমার ও অ্যাডমিনে ইমেইল পাঠানো হয়েছে।');
+      showPage('mainPage');
+    } catch (err) {
+      alert('❌ অর্ডার ব্যর্থ: ' + err.message);
+    }
+  }
+
+  // handle Add to Cart button
+  document.querySelector('#packagePage .orange').addEventListener('click', function () {
+    goToCheckout();
+  });
+</script>
 </body>
 </html>
