--- a/Index.html
+++ b/Index.html
@@ -3,58 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <title>Crunchyroll Premium BD Shop</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <!-- EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- Design Style -->
   <style>
     body {
-      margin: 0; font-family: 'Segoe UI', sans-serif; background: #fff; color: #000;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #ffffff;
+      color: #000000;
+    }
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 0 15px;
     }
     .page {
       display: none;
-      max-width: 600px;
-      margin: 40px auto;
-      background: white;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      text-align: center;
+      background: #ffffff;
     }
-    .active { display: block; }
-    button {
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      padding: 12px 20px;
-      font-size: 18px;
-      cursor: pointer;
-      font-weight: 600;
-      margin-top: 20px;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-    h2 { margin-bottom: 10px; }
-    .package-btn {
+    .active {
       display: block;
-      margin: 10px auto;
-      width: 80%;
-      background: #0f7dc8;
+    }
+    img.banner {
+      width: 100%;
       border-radius: 8px;
-      padding: 12px;
-      font-size: 16px;
-      color: white;
-      cursor: pointer;
-      border: none;
     }
-    .package-btn:hover {
-      background: #095e9f;
+    img.avatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      border: 3px solid #000;
+      display: block;
+      margin: 20px auto;
     }
-    input, select {
+    input, select, button {
       width: 100%;
       padding: 10px;
       margin: 8px 0;
@@ -63,194 +47,216 @@
       font-size: 16px;
       box-sizing: border-box;
     }
+    button {
+      cursor: pointer;
+    }
+    .mega-btn {
+      background: green;
+      color: white;
+    }
+    .package-btn {
+      background: #0f7dc8;
+      color: white;
+      margin-top: 6px;
+      border-radius: 8px;
+    }
+    .package-btn:hover {
+      background: #095e9f;
+    }
+    .action-btns {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 16px;
+    }
+    .orange {
+      background: orange;
+      color: black;
+    }
+    .green {
+      background: green;
+      color: white;
+    }
     .error {
       color: #ff4d4d;
-      font-weight: 600;
-      margin-top: 5px;
+    }
+    .copy-box {
+      background: #f2f2f2;
+      padding: 10px;
+      border-radius: 8px;
+      margin-top: 10px;
+      color: black;
     }
   </style>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </head>
 <body>
+<div class="container">
 
 <!-- Main Page -->
 <div id="mainPage" class="page active">
-  <h2>🎉 Crunchyroll Premium BD Shop</h2>
-  <p>সহজেই প্রিমিয়াম সাবস্ক্রিপশন প্যাকেজ অর্ডার করুন।</p>
-  <button onclick="showPage('packagePage')">💥 BUY NOW</button>
+  <img
+    src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg"
+    class="banner"
+  />
+  <img
+    src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg"
+    class="avatar"
+  />
+  <h2 style="text-align:center;">Welcome to Crunchyroll Premium BD Shop</h2>
+  <button class="mega-btn" onclick="showPage('packagePage')">💥 BUY NOW</button>
+  <p style="margin-top:20px;">
+    <strong>Total Users:</strong>
+    <span id="userCount">0</span> |
+    <strong>Total Orders:</strong>
+    <span id="orderCount">0</span>
+  </p>
 </div>
 
-<!-- Package Selection Page -->
+<!-- Package Page -->
 <div id="packagePage" class="page">
   <h2>📦 প্যাকেজ সিলেকশন</h2>
-
+  <!-- Shared -->
   <h3>📤 Shared Profile</h3>
-  <button class="package-btn" onclick="selectPackage('Shared Profile','1 Month',100)">1 Month – 100 TK</button>
-  <button class="package-btn" onclick="selectPackage('Shared Profile','2 Months',200)">2 Months – 200 TK</button>
-  <button class="package-btn" onclick="selectPackage('Shared Profile','3 Months',300)">3 Months – 300 TK</button>
-  <button class="package-btn" onclick="selectPackage('Shared Profile','6 Months',600)">6 Months – 600 TK</button>
-
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '1 Month', 100)"
+  >
+    1 Month – 100 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '2 Months', 200)"
+  >
+    2 Months – 200 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '3 Months', 300)"
+  >
+    3 Months – 300 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '6 Months', 600)"
+  >
+    6 Months – 600 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Shared Profile', '8 Months', 840)"
+  >
+    8 Months – 840 TK
+  </button>
+  <!-- Personal -->
   <h3>👤 Personal Profile</h3>
-  <button class="package-btn" onclick="selectPackage('Personal Profile','1 Month',240)">1 Month – 240 TK</button>
-  <button class="package-btn" onclick="selectPackage('Personal Profile','2 Months',480)">2 Months – 480 TK</button>
-  <button class="package-btn" onclick="selectPackage('Personal Profile','3 Months',720)">3 Months – 720 TK</button>
-
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '1 Month', 240)"
+  >
+    1 Month – 240 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '2 Months', 480)"
+  >
+    2 Months – 480 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '3 Months', 720)"
+  >
+    3 Months – 720 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '6 Months', 1440)"
+  >
+    6 Months – 1440 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '8 Months', 1800)"
+  >
+    8 Months – 1800 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Personal Profile', '12 Months', 2760)"
+  >
+    12 Months – 2760 TK
+  </button>
+  <!-- Primary -->
   <h3>👑 Primary Account</h3>
-  <button class="package-btn" onclick="selectPackage('Primary Account','1 Month',650)">1 Month – 650 TK</button>
-  <button class="package-btn" onclick="selectPackage('Primary Account','2 Months',1300)">2 Months – 1300 TK</button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '1 Month', 650)"
+  >
+    1 Month – 650 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '2 Months', 1300)"
+  >
+    2 Months – 1300 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '3 Months', 1950)"
+  >
+    3 Months – 1950 TK
+  </button>
+  <button
+    class="package-btn"
+    onclick="selectPackage('Primary Account', '6 Months', 3600)"
+  >
+    6 Months – 3600 TK
+  </button>
 
-  <button style="background: orange;" onclick="goToCheckout()">🛒 Add To Cart</button>
-  <button onclick="showPage('mainPage')">⬅️ Back To Home</button>
-
+  <div class="action-btns">
+    <button class="orange" onclick="goToCheckout()">🛒 Add To Cart</button>
+    <button class="green" onclick="showPage('mainPage')">⬅️ Back To Home</button>
+  </div>
   <p id="pkgError" class="error"></p>
 </div>
 
 <!-- Checkout Page -->
 <div id="checkoutPage" class="page">
   <h2>✅ Checkout</h2>
-  <div id="selectedInfo" style="text-align:left; margin-bottom: 20px;"></div>
-  <input id="coName" type="text" placeholder="Full Name" />
-  <input id="coEmail" type="email" placeholder="Email" />
-  <input id="coAddress" type="text" placeholder="Street Address" />
-  <input id="coMobile" type="text" placeholder="Mobile Number" />
-  <select id="paymentMethod" onchange="updatePayNumber()">
-    <option value="">-- পেমেন্ট মেথড সিলেক্ট করুন --</option>
-    <option value="Bkash">Bkash</option>
-    <option value="Nagad">Nagad</option>
-    <option value="Rocket">Rocket</option>
-  </select>
-  <div id="payNumber" style="background:#f0f0f0; padding:10px; border-radius:6px; margin-top:10px;"></div>
-
-  <input id="coTransID" type="text" placeholder="Transaction ID" style="margin-top:10px;" />
-  <p style="font-size:12px; color:#666; margin-top:5px;">
-    অবশ্যই নির্দিষ্ট পরিমাণ সেন্ড মানি করতে হবে। কম হলে রিফান্ড হবে না।
-  </p>
-  <button onclick="confirmOrder()">✅ Order Confirm</button>
-  <button style="background: orange;" onclick="showPage('packagePage')">⬅️ Back To Packages</button>
-
+  <div id="selectedInfo"></div>
+  <div style="margin-top: 20px">
+    <input id="coName" type="text" placeholder="Full Name" />
+    <input id="coEmail" type="email" placeholder="Email" />
+    <input id="coAddress" type="text" placeholder="Street Address" />
+    <input id="coMobile" type="text" placeholder="Mobile Number" />
+    <input id="coPaymentNumber" type="text" placeholder="Payment Number" />
+    <input id="coTransID" type="text" placeholder="Transaction ID" />
+    <select id="paymentMethod" onchange="updatePayNumber()">
+      <option value="">-- পেমেন্ট মেথড সিলেক্ট করুন --</option>
+      <option value="Bkash">Bkash</option>
+      <option value="Nagad">Nagad</option>
+      <option value="Rocket">Rocket</option>
+    </select>
+    <div id="payNumber" class="copy-box"></div>
+    <p>
+      অবশ্যই সেন্ড মানি করতে হবে এবং নির্দিষ্ট পরিমাণ পাঠাবেন। কম পাঠালে
+      রিফান্ড হবে না।
+    </p>
+    <button class="green" onclick="confirmOrder()">✅ Order Confirm</button>
+    <button class="orange" onclick="showPage('packagePage')">
+      ⬅️ Back To Packages
+    </button>
+  </div>
   <p id="coError" class="error"></p>
 </div>
 
+</div>
+
 <script>
-  // Firebase Config
+  // --- Configurations ---
   const firebaseConfig = {
-    apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-    authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-    projectId: "crunchyrollpremiumbd-shop",
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
-  // EmailJS Config
-  const emailjsConfig = {
-    service: "service_z1714kq",
-    adminTpl: "template_hp66tqp",
-    custTpl: "template_1z1lhlf",
-    publicKey: "SsUmUorUm-BZG8LBY"
-  };
-  emailjs.init(emailjsConfig.publicKey);
-
-  // Page Show/Hide
-  function showPage(id) {
-    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-    clearErrors();
-  }
-
-  // Clear Errors
-  function clearErrors() {
-    document.getElementById('pkgError').textContent = '';
-    document.getElementById('coError').textContent = '';
-  }
-
-  // Package Selection
-  let selectedPkg = null;
-  function selectPackage(profile, duration, price) {
-    selectedPkg = { profile, duration, price };
-    document.getElementById('pkgError').textContent = '';
-    alert(`✅ '${profile}' (${duration}) – ${price} TK সিলেক্ট হয়েছে`);
-  }
-
-  // Go to Checkout
-  function goToCheckout() {
-    if (!selectedPkg) {
-      document.getElementById('pkgError').textContent = '⚠️ প্যাকেজ সিলেক্ট করুন';
-      return;
-    }
-    document.getElementById('selectedInfo').innerHTML =
-      `<p>📦 প্যাকেজ: <strong>${selectedPkg.profile}</strong></p>
-       <p>🕒 মেয়াদ: <strong>${selectedPkg.duration}</strong></p>
-       <p>💰 মূল্য: <strong>${selectedPkg.price} TK</strong></p>`;
-    showPage('checkoutPage');
-  }
-
-  // Update Payment Number on Method Select
-  function updatePayNumber() {
-    const method = document.getElementById('paymentMethod').value;
-    let number = '';
-    if (method === 'Bkash') number = '01740433733';
-    else if (method === 'Nagad' || method === 'Rocket') number = '01603599843';
-    document.getElementById('payNumber').innerHTML = number ? 
-      `${method} নম্বর: <strong>${number}</strong> <button onclick="copyText('${number}')">📋 কপি</button>` : '';
-  }
-
-  // Copy to clipboard
-  function copyText(text) {
-    navigator.clipboard.writeText(text);
-    alert('নম্বর কপি হয়েছে!');
-  }
-
-  // Confirm Order
-  async function confirmOrder() {
-    const name = document.getElementById('coName').value.trim();
-    const email = document.getElementById('coEmail').value.trim();
-    const addr = document.getElementById('coAddress').value.trim();
-    const mobile = document.getElementById('coMobile').value.trim();
-    const pm = document.getElementById('paymentMethod').value;
-    const trans = document.getElementById('coTransID').value.trim();
-    const coErr = document.getElementById('coError');
-    coErr.textContent = '';
-
-    if (!name || !email || !addr || !mobile || !pm || !trans) {
-      coErr.textContent = '⚠️ সব তথ্য সঠিকভাবে পূরণ করুন';
-      return;
-    }
-    if (!selectedPkg) {
-      coErr.textContent = '⚠️ প্যাকেজ সিলেক্ট করুন';
-      showPage('packagePage');
-      return;
-    }
-
-    const orderData = {
-      name, email, addr, mobile, pm, trans,
-      packageProfile: selectedPkg.profile,
-      packageDuration: selectedPkg.duration,
-      packagePrice: selectedPkg.price,
-      timestamp: firebase.firestore.FieldValue.serverTimestamp()
-    };
-
-    try {
-      await db.collection('orders').add(orderData);
-
-      // Send EmailJS emails
-      emailjs.send(emailjsConfig.service, emailjsConfig.custTpl, orderData);
-      emailjs.send(emailjsConfig.service, emailjsConfig.adminTpl, orderData);
-
-      alert('✅ অর্ডার সফল হয়েছে। ইমেইল পাঠানো হয়েছে।');
-      // Reset & go home
-      selectedPkg = null;
-      document.getElementById('coName').value = '';
-      document.getElementById('coEmail').value = '';
-      document.getElementById('coAddress').value = '';
-      document.getElementById('coMobile').value = '';
-      document.getElementById('paymentMethod').value = '';
-      document.getElementById('payNumber').innerHTML = '';
-      document.getElementById('coTransID').value = '';
-      showPage('mainPage');
-    } catch (err) {
-      coErr.textContent = '❌ অর্ডার ব্যর্থ: ' + err.message;
-    }
-  }
-</script>
-
-</body>
-</html>
+    apiKey: 'AIzaSyDDvK
