--- a/admin22.html
+++ b/admin22.html
@@ -92,7 +92,7 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  const adminEmail = "your_admin_email@gmail.com"; // ✳️ এখানে তোমার Gmail বসাও
+  const adminEmail = "jisan427768@gmail.com"; // ✳️ এখানে তোমার Gmail বসাও
 
   auth.onAuthStateChanged(user => {
     if (user && user.email === adminEmail) {
